# calculator

./: CMakeLists.txt  README.md
include/: functions.h
src/: functions.cpp  main.cpp
tests/callgrind/: callgrind.out.320220  callgrind.out.428432  callgrind.sh
tests/caverage_info/coverage/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
tests/caverage_info/coverage/src/: functions.cpp.func-c.html  functions.cpp.func.html  functions.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
tests/code_rewue/: clang-tidy-report.txt  clang-tidy.sh
tests/coverage_info/: help  lcav.sh
tests/coverage_info/coverage/: index-sort-f.html  index-sort-l.html  index.html
tests/coverage_info/coverage/src/: functions.cpp.func-c.html  functions.cpp.func.html  functions.cpp.gcov.html  gtest-assertion-result.cc.func-c.html  gtest-assertion-result.cc.func.html  gtest-assertion-result.cc.gcov.html  gtest-death-test.cc.func-c.html  gtest-death-test.cc.func.html  gtest-death-test.cc.gcov.html  gtest-filepath.cc.func-c.html  gtest-filepath.cc.func.html  gtest-filepath.cc.gcov.html  gtest-internal-inl.h.func-c.html  gtest-internal-inl.h.func.html  gtest-internal-inl.h.gcov.html  gtest-matchers.cc.func-c.html  gtest-matchers.cc.func.html  gtest-matchers.cc.gcov.html  gtest-port.cc.func-c.html  gtest-port.cc.func.html  gtest-port.cc.gcov.html  gtest-printers.cc.func-c.html  gtest-printers.cc.func.html  gtest-printers.cc.gcov.html  gtest-test-part.cc.func-c.html  gtest-test-part.cc.func.html  gtest-test-part.cc.gcov.html  gtest-typed-test.cc.func-c.html  gtest-typed-test.cc.func.html  gtest-typed-test.cc.gcov.html  gtest.cc.func-c.html  gtest.cc.func.html  gtest.cc.gcov.html  index-sort-f.html  index-sort-l.html  index.html
tests/gprof/: gmon.out  gprof_gen.sh
tests/gtest/: CMakeLists.txt  utest_evaluate.cpp
(+66 files in other folders)
